// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NEW and EDIT <Version /> should handle empty field 1`] = `
<div
  class="MuiFormControl-root MuiFormControl-fullWidth"
>
  <div
    class="MuiFormControl-root MuiTextField-root MuiFormControl-marginNormal"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
      data-shrink="false"
      for="version"
      id="version-label"
    >
      Version
    </label>
    <div
      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
    >
      <input
        aria-describedby="version-helper-text"
        aria-invalid="false"
        class="MuiInputBase-input MuiInput-input"
        id="version"
        name="version"
        type="text"
        value=""
      />
    </div>
    <p
      class="MuiFormHelperText-root"
      id="version-helper-text"
    >
      Current version of the DRS Object, it should be updated each time the DRS Object is modified.
    </p>
  </div>
</div>
`;

exports[`NEW and EDIT <Version /> should handle populated field 1`] = `
<div
  class="MuiFormControl-root MuiFormControl-fullWidth"
>
  <div
    class="MuiFormControl-root MuiTextField-root MuiFormControl-marginNormal"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled"
      data-shrink="true"
      for="version"
      id="version-label"
    >
      Version
    </label>
    <div
      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
    >
      <input
        aria-describedby="version-helper-text"
        aria-invalid="false"
        class="MuiInputBase-input MuiInput-input"
        id="version"
        name="version"
        type="text"
        value="1.0.0"
      />
    </div>
    <p
      class="MuiFormHelperText-root MuiFormHelperText-filled"
      id="version-helper-text"
    >
      Current version of the DRS Object, it should be updated each time the DRS Object is modified.
    </p>
  </div>
</div>
`;

exports[`SHOW <Version /> should handle populated field 1`] = `
<div
  class="MuiFormControl-root MuiFormControl-fullWidth"
>
  <div
    class="MuiFormControl-root MuiTextField-root MuiFormControl-marginNormal"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled"
      data-shrink="true"
      for="version"
      id="version-label"
    >
      Version
    </label>
    <div
      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
    >
      <input
        aria-describedby="version-helper-text"
        aria-invalid="false"
        class="MuiInputBase-input MuiInput-input"
        id="version"
        name="version"
        readonly=""
        type="text"
        value="1.0.0"
      />
    </div>
    <p
      class="MuiFormHelperText-root MuiFormHelperText-filled"
      id="version-helper-text"
    >
      Current version of the DRS Object, it should be updated each time the DRS Object is modified.
    </p>
  </div>
</div>
`;
